<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SharingActivity">

    <ImageView
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        />
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:fontFamily="@font/source_sans_pro_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/allowSharingButton"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="#333538"
        android:text="@string/privacyPrompt"/>

    <Button
        style="@style/positive_button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/promptPrivacyPolicyText"
        app:layout_constraintStart_toEndOf="@id/disallowSharingButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:id="@+id/allowSharingButton"
        android:text="@string/allow"
        />

    <Button
        style="@style/text_button"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/promptPrivacyPolicyText"
        app:layout_constraintEnd_toStartOf="@id/allowSharingButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="24dp"
        android:id="@+id/disallowSharingButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/dontAllow"/>

    <LinearLayout
        android:layout_marginBottom="8dp"
        android:id="@+id/promptPrivacyPolicyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:fontFamily="@font/source_sans_pro_regular"
            android:textColor="@color/medium_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/promptSubText"/>

        <Button
            android:includeFontPadding="false"
            android:padding="0dp"
            android:textSize="12sp"
            style="@style/text_button"
            android:id="@+id/privacyPolicyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_btn"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>