<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ErrorActivity">
    <ImageView
        android:layout_marginTop="96dp"
        android:id="@+id/errorIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/errorUhOh"
        app:layout_constraintVertical_chainStyle="packed"
        android:src="@drawable/ic_error"
        android:layout_width="59dp"
        android:layout_height="52dp"/>

    <TextView
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/errorIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/errorText"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"

        android:text="@string/uhoh"
        android:textSize="24sp"
        android:textColor="@color/medium_gray"
        android:fontFamily="@font/varela_round_regular"
        android:id="@+id/errorUhOh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/errorUhOh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/errorSubtitle"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:gravity="center"

        android:text="@string/genericError"
        android:textSize="18sp"
        android:textColor="@color/medium_gray"
        android:fontFamily="@font/varela_round_regular"
        android:id="@+id/errorText"
        android:layout_width="0dp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:scrollbarStyle="outsideInset"
        android:maxLines="12"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/errorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/primaryButton"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"

        android:text="@string/configError"
        android:textSize="15sp"
        android:textColor="@color/subtitle_gray"
        android:fontFamily="@font/source_sans_pro_regular"
        android:id="@+id/errorSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <Button
        style="@style/text_button"
        android:layout_marginBottom="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/primaryButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="24dp"
        android:id="@+id/secondaryButton"
        android:layout_width="wrap_content"
        android:text="@string/report_bug"/>

    <Button
        style="@style/positive_button"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/secondaryButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="8dp"
        android:id="@+id/primaryButton"
        android:layout_width="wrap_content"
        android:text="@string/testAgain"/>

</androidx.constraintlayout.widget.ConstraintLayout>